--- a/IAW_project/WebContent/WEB-INF/web.xml
+++ b/IAW_project/WebContent/WEB-INF/web.xml
@@ -6,4 +6,8 @@
     <welcome-file>index.jsp</welcome-file>
     
   </welcome-file-list>
+  <error-page>
+    <error-code>404</error-code>
+    <location>/pages/examples/404.jsp</location>
+  </error-page>
 </web-app>
